--- a/client/style.less
+++ b/client/style.less
@@ -1,3 +1,12 @@
 h1{
-  color :red;
+  color: black;
+}
+
+.image{
+  display: inline-block;
+  margin: 3px;
+  width: 340px;
+  height: 230px;
+  border: 1px solid black;
+  background-size: cover;
 }
